# Paper2AgentWithSkills

./: .dockerignore  Dockerfile  Makefile  README.md  pyproject.toml  reproduce_integrity_error.py  requirements.txt  test_HF_medigemma.py  verify_connections.py
knowledge_db/78ce91d8-2a17-49bc-9b68-0dd31ed76ffc/: index_metadata.pickle
legacy_archive/: Paper2Agent.sh
legacy_archive/agents/: benchmark-extractor.md  benchmark-judge.md  benchmark-reviewer.md  benchmark-solver.md
legacy_archive/scripts/: 05_run_step4_wrap_mcp.sh  05_run_step6_extract_benchmarks.sh  05_run_step7_benchmark_assessment.sh
legacy_archive/tools/: benchmark_assessor.py  benchmark_extractor.py  benchmark_reviewer.py  list_models.py  preprocess_notebook.py
paper2agent/: cli.py  orchestrator.py  ui.py
paper2agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
paper2agent/agents/: grounding.py  integrity.py  synthesizer.py
paper2agent/knowledge/: ingest.py  retriever.py
paper2agent/llm/: client.py  config.py
paper2agent/modules/: scanner.py
paper2agent/sandbox/: execution.py
paper2agent/skills/: registry.py
skills_db/: chroma.sqlite3
tests/: test_e2e.py  test_integrity.py  test_multi_model.py  test_scanner.py
